of course wisdom-tree already exists on pypi

--- a/tests/id3-test.ipynb
+++ b/tests/id3-test.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wisdom_tree import split_data, ID3, plot_confusion_matrix, calculate_metrics\n",
+    "from decisive_tree import split_data, ID3, plot_confusion_matrix, calculate_metrics\n",
     "from nb_utils import display_side_by_side, print_metrics_report\n",
     "import pandas as pd"
    ]
