--- a/tests/cart-test.ipynb
+++ b/tests/cart-test.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wisdom_tree import split_data, CART, plot_confusion_matrix, calculate_metrics, ordinal_encode, one_hot_encode\n",
+    "from decisive_tree import split_data, CART, plot_confusion_matrix, calculate_metrics, ordinal_encode, one_hot_encode\n",
     "from nb_utils import display_side_by_side, print_metrics_report\n",
     "import pandas as pd"
    ]
